# online-shop-services

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  list.todo  list_todo.md  list_todo.txt
documentation/: CMakeLists.txt  Doxyfile.in
documentation/diagrams/: OnlineShopMicroservices.drawio
documentation/releases/: ReleasePlanVersion_1_0.md
documentation/user/: Properties.md  Properties.txt
include/user/: User.hpp
source/user/: CMakeLists.txt  User.cpp
test/: CMakeLists.txt
test/cpr/: CMakeLists.txt  Get.cpp
test/user/: Authorization.cpp  CMakeLists.txt  Name.cpp  Password.cpp  Surname.cpp
